compiler-skeleton/tests/parse-error/pares_oper_aritm.ln
a:int;
b:int;
c:int;
d:bool;

c=a/*b;

a=a/+b;

a=b*+a;

a=b++a;

a=a-+b;

a=a++b;

c=a++++++b;




